Change cursor to pointer in cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ a:hover{
   perspective: 1000px;
   width: 25%;
   height: 434px;
+  cursor: pointer
 }
 /* flip the pane when hovered */
 .flip-container:hover .flipper,
