--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,6 @@ a:hover {
 /* hide back of pane during swap */
 .front,
 .back {
-
   position: absolute;
   top: 0;
   left: 0;
@@ -87,22 +86,24 @@ a:hover {
 
   overflow: hidden;
 }
-.front>div{
+.front > div {
   position: absolute;
   bottom: 0px;
-  background-image: linear-gradient(to top,#182743 0%, #48556329 100%);
+  background-image: linear-gradient(to top, #182743 0%, #48556329 100%);
   color: white;
   padding: 0px 20px;
   left: 0px;
   right: 0px;
 }
-.front>div p{
+.front > div p {
   text-align: right;
   font-size: 13px;
 }
 /* back, initially hidden pane */
 .back {
   transform: rotateY(180deg);
+  background-color: #2e4053;
+  color: white;
 }
 .flip-container > p {
   position: absolute;
