--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ img {
   width: 100%;
   height: 300px;
   object-fit: cover;
+  object-position: 0px 11%;
 }
 
 h2 {
@@ -123,13 +124,36 @@ a:hover {
   float: right;
 }
 
+.with-title > .flip-container:first-child {
+  width: 75%;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  grid-row-gap: 8%;
+  padding: 0px 20%;
+}
+.with-title > .flip-container:first-child *{
+  text-align: center;
+  margin:0px;
+  position: relative;
+}
 @media only screen and (max-width: 1000px) {
   .flip-container {
     width: 50%;
+  }
+  .with-title > .flip-container:first-child {
+  width: 100%;
   }
 }
 @media only screen and (max-width: 600px) {
   .flip-container {
     width: 100%;
+  }
+  .with-title > .flip-container:first-child {
+    padding:0px 4%;
+  }
+  img {
+    object-position: 0px 13%;
   }
 }
