--- a/victims/assets/css/style.css
+++ b/victims/assets/css/style.css
@@ -109,7 +109,9 @@ a:hover {
 .flip-container > p {
   position: absolute;
   bottom: 0px;
-  width: 100%;
+  width: 70%;
+  margin: auto !important;
+  display: block;
 }
 .back p {
   text-align: left;
@@ -131,7 +133,7 @@ a:hover {
   justify-content: center;
   align-content: center;
   grid-row-gap: 8%;
-  padding: 0px 20%;
+  padding: 0px 7%;
 }
 .with-title > .flip-container:first-child *{
   text-align: center;
