--- a/plans/style.css
+++ b/plans/style.css
@@ -1,11 +1,27 @@
 #chartdiv {
-  width: 100%;
+  width : 90%;
   height: 500px;
 }
 
 p {
-  font-size: 17px;
-  width:38%;
-  float:right;
-  font-size:15px;
+  font-size       : 16px;
+  width           : 39%;
+  font-size       : 15px;
+  position        : absolute;
+  right           : 0;
+  bottom          : 80px;
+  background-color: white;
+  padding         : 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  #chartdiv {
+    width: 100%;
+  }
+
+  p {
+    position: static;
+    width   : 60%;
+    margin  : 0 auto;
+  }
 }
