--- a/victims/assets/css/style.css
+++ b/victims/assets/css/style.css
@@ -1,3 +1,6 @@
+:root {
+  --flip-container-height: 300px;
+}
 * {
   box-sizing: border-box;
 }
@@ -9,7 +12,7 @@ body {
 }
 img {
   width: 100%;
-  height: 300px;
+  height: var(--flip-container-height);
   object-fit: cover;
   object-position: 0px 11%;
 }
@@ -38,7 +41,7 @@ a:hover {
 .flip-container {
   perspective: 1000px;
   width: 25%;
-  height: 300px;
+  height: var(--flip-container-height);
   cursor: pointer;
   /* border-radius: 13px; */
   /* overflow: hidden; */
@@ -73,7 +76,7 @@ a:hover {
   left: 0;
   right: 0px;
   padding: 20px;
-  height: 300px;
+  height: var(--flip-container-height);
 }
 
 /* front pane, placed above back */
@@ -135,9 +138,9 @@ a:hover {
   grid-row-gap: 8%;
   padding: 0px 7%;
 }
-.with-title > .flip-container:first-child *{
+.with-title > .flip-container:first-child * {
   text-align: center;
-  margin:0px;
+  margin: 0px;
   position: relative;
 }
 @media only screen and (max-width: 1000px) {
@@ -145,7 +148,7 @@ a:hover {
     width: 50%;
   }
   .with-title > .flip-container:first-child {
-  width: 100%;
+    width: 100%;
   }
 }
 @media only screen and (max-width: 600px) {
@@ -153,7 +156,7 @@ a:hover {
     width: 100%;
   }
   .with-title > .flip-container:first-child {
-    padding:0px 4%;
+    padding: 0px 4%;
   }
   img {
     object-position: 0px 13%;
