change Flip Container Height and change scrollbar styles

--- a/victims/assets/css/style.css
+++ b/victims/assets/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --flip-container-height: 300px;
+  --flip-container-height: 220px;
 }
 * {
   box-sizing: border-box;
@@ -75,7 +75,7 @@ a:hover {
   top: 0;
   left: 0;
   right: 0px;
-  padding: 20px;
+  padding: 15px;
   height: var(--flip-container-height);
 }
 
@@ -108,6 +108,9 @@ a:hover {
   transform: rotateY(180deg);
   background-color: #2e4053;
   color: white;
+  /* overflow: auto; */
+  font-size: 0.9em;
+  display: grid;
 }
 .flip-container > p {
   position: absolute;
@@ -118,6 +121,8 @@ a:hover {
 }
 .back p {
   text-align: left;
+  overflow: auto;
+  padding-right: 7px;
 }
 .back a {
   /* position: absolute; */
@@ -145,7 +150,7 @@ a:hover {
 }
 @media only screen and (max-width: 1000px) {
   .flip-container {
-    width: 50%;
+    width: 33%;
   }
   .with-title > .flip-container:first-child {
     width: 100%;
@@ -161,4 +166,23 @@ a:hover {
   img {
     object-position: 0px 13%;
   }
+}
+/* width */
+p::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+p::-webkit-scrollbar-track {
+  background: #000000;
+}
+ 
+/* Handle */
+p::-webkit-scrollbar-thumb {
+  background: #f1bf3c; 
+}
+
+/* Handle on hover */
+p::-webkit-scrollbar-thumb:hover {
+  /* background: #555;  */
 }
