--- a/victims/assets/css/style.css
+++ b/victims/assets/css/style.css
@@ -8,7 +8,6 @@ body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 img {
   width: 100%;
@@ -35,6 +34,7 @@ a:hover {
   display: flex;
   flex-direction: row;
   flex-flow: row wrap;
+  overflow: hidden;
 }
 
 /* entire container, keeps perspective */
