--- a/victims/assets/css/style.css
+++ b/victims/assets/css/style.css
@@ -47,11 +47,20 @@ a:hover {
   /* overflow: hidden; */
 }
 /* flip the pane when hovered */
+
+
 .flip-container:hover .flipper,
 .flip-container.hover .flipper {
   transform: rotateY(180deg);
 }
-
+@media only screen and (max-width: 600px) {
+  .flip-container:hover .flipper{
+  transform: unset;
+  }
+  .flip-container.hover .flipper {
+  transform: rotateY(180deg);
+}
+}
 .flip-container,
 .front,
 .back {
@@ -65,6 +74,7 @@ a:hover {
   transform-style: preserve-3d;
   position: relative;
   height: 100%;
+  transform: rotateY(0deg);
   /* border-radius: 8px; */
 }
 
