fixing iphone issue

--- a/victims/assets/css/style.css
+++ b/victims/assets/css/style.css
@@ -121,6 +121,7 @@ a:hover {
   /* overflow: auto; */
   font-size: 0.9em;
   display: grid;
+  z-index: 9999999;
 }
 .flip-container > p {
   position: absolute;
